objects/Goal_Letter__c.object
<CustomObject>
    <fields>
        <fullName>ANCV_AMT_ICR_0_100_attainment__c</fullName>
        <label>[ANCV (AMT) ICR] 0% - 100% attainment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANCV_AMT_ICR__c</fullName>
        <label>ANCV (AMT) ICR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANCV_AMT_OA_1_descriptor__c</fullName>
        <description>ANCV (AMT) OA1&amp;2 X factor and threshold from Comp plan matrix</description>
        <label>ANCV (AMT) OA 1 descriptor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANCV_AMT_OA_1_rate__c</fullName>
        <description>ANCV (AMT) OA1 X factor (not a calc)</description>
        <label>ANCV (AMT) OA 1 factor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANCV_AMT_OA_2_descriptor__c</fullName>
        <label>ANCV (AMT) OA 2 descriptor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANCV_AMT_OA_2_rate__c</fullName>
        <label>ANCV (AMT) OA 2 factor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANCV_AMT_Quota__c</fullName>
        <description>ANCV (AMT) Quota from sales Ops</description>
        <label>ANCV (AMT) Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ANCV_ICR__c</fullName>
        <description>Calculated field NCV TV/NCV Quota</description>
        <label>ANCV ICR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ANCV_Installment_Q1__c</fullName>
        <label>ANCV Installment Q1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ANCV_Installment_Q3__c</fullName>
        <label>ANCV Installment Q3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ANCV_OA_1_descriptor__c</fullName>
        <description>ANCV OA1&amp;2 X factor and threshold from Comp plan matrix</description>
        <label>ANCV OA 1 descriptor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANCV_OA_1_rate__c</fullName>
        <description>ANCV ICR*OA1/2 X factor</description>
        <label>ANCV OA 1 rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ANCV_OA_2_descriptor__c</fullName>
        <label>ANCV OA 2 descriptor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANCV_OA_2_rate__c</fullName>
        <label>ANCV OA 2 rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ANCV_OA_3_descriptor__c</fullName>
        <label>ANCV OA 3 descriptor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANCV_OA_3_rate__c</fullName>
        <label>ANCV OA 3 rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ANCV_Quota__c</fullName>
        <description>ANCV Quota from sales Ops</description>
        <label>ANCV Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Accounts__c</fullName>
        <label>Assigned Accounts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Salary_2H__c</fullName>
        <label>Base Salary_2H</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Salary__c</fullName>
        <description>Annual Base Salary from Workday</description>
        <label>Base Salary_1H</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_ICR__c</fullName>
        <description>Calculated field NCV TV/NCV Quota</description>
        <label>Booking ICR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Booking_OA_1_descriptor__c</fullName>
        <description>Booking OA1 X factor and threshold from Comp plan matrix</description>
        <label>Booking OA 1 descriptor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_OA_1_rate__c</fullName>
        <description>Booking ICR*OA1/2 X factor</description>
        <label>Booking OA 1 rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Booking_OA_2_descriptor__c</fullName>
        <label>Booking OA 2 descriptor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_OA_2_rate__c</fullName>
        <label>Booking OA 2 rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Booking_OA_3_descriptor__c</fullName>
        <label>Booking OA 3 descriptor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_OA_3_rate__c</fullName>
        <label>Booking OA 3 rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Booking_Quota__c</fullName>
        <description>Booking Quota from sales Ops</description>
        <label>Booking Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Car_plan__c</fullName>
        <label>Car plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_for_the_record__c</fullName>
        <label>Currency for the record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EchoSign_Send_Date__c</fullName>
        <label>EchoSign Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GL_Type__c</fullName>
        <label>GL Type</label>
        <picklist>
            <picklistValues>
                <fullName>2H Comp Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD_GL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD_GL_ANCV_ONLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD_GL_RR_ONLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMT_GL_1_2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMT_GL_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMT_GL_Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMT_GL_EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMT_GL_EMEA_EN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMT_GL_Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX_GL_2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX_GL_Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX_GL_Asia Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX_GL_Asia Nonlocal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX_GL_CANADA_2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX_GL_China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX_GL_EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX_GL_EMEA_EN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX_GL_Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX_GL_NCV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP_GL_BKG_ANCV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP_GL_BKG_ANCV(AMT)_RR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP_GL_BKG_ONLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX_GL_1_2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX_GL_MBO_2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX_GL_CANADA_1_2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX_GL_CANADA_MBO_2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX_GL_CHINA_1_2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX_GL_CHINA_MBO_2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX_GL_ASIA_1_2017</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goal_Letter_Approved_Rejected_Date__c</fullName>
        <label>Goal Letter Approved/Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Goal_Letter_Number__c</fullName>
        <label>Goal Letter Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Letter_Status__c</fullName>
        <label>Goal Letter Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Manager_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Manager_Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Participant_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Participant_approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Japan_Sales_KSI_at_target_1H__c</fullName>
        <label>Japan Sales KSI at target 1H</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Japan_Sales_KSI_at_target_2H__c</fullName>
        <label>Japan Sales KSI at target 2H</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>Job profile in Workday</description>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Reminder_Email_Date__c</fullName>
        <label>Last_Reminder Email Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Office location</description>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBO__c</fullName>
        <description>Management by objectives</description>
        <label>MBO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ManagerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the lookup relationship on User.</description>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Goal_Letters1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager_Submitted_Date__c</fullName>
        <description>The date on which goal letter is sent to Manager for approval</description>
        <label>Manager Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Manager_Workday_ID__c</fullName>
        <label>Manager Workday ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <description>Reporting manager</description>
        <label>Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_login__c</fullName>
        <label>Manager login</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>Mileage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_ICM_ID__c</fullName>
        <label>Participant ICM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Goal_Letters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant_Submitted_Date__c</fullName>
        <description>The date on which goal letter is sent to Participant for approval after Manager approval</description>
        <label>Participant Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant</label>
        <referenceTo>Goal_Letter_Participant__c</referenceTo>
        <relationshipLabel>Goal Letters</relationshipLabel>
        <relationshipName>Goal_Letters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant_login__c</fullName>
        <label>Participant login</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Particpant_Workday_ID__c</fullName>
        <label>Particpant Workday ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Participant__c</fullName>
        <description>First name and Last Name of the participant</description>
        <label>Participant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Period__c</fullName>
        <label>Plan Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RR_Installment_Q1__c</fullName>
        <label>RR Installment Q1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RR_Installment_Q3__c</fullName>
        <label>RR Installment Q3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RUNRATE_ICR_0_100_attainment__c</fullName>
        <description>“% Attainment at Year End * Bonus at Target”</description>
        <label>RUNRATE ICR 0% - 100% attainment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RUNRATE_OA_1_descriptor__c</fullName>
        <description>RUNRATE OA1 or 2 X factor</description>
        <label>RUNRATE OA 1 descriptor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RUNRATE_OA_1_rate__c</fullName>
        <label>RUNRATE OA 1 factor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RUNRATE_OA_2_descriptor__c</fullName>
        <label>RUNRATE OA 2 descriptor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RUNRATE_OA_2_rate__c</fullName>
        <label>RUNRATE OA 2 factor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RUNRATE_Quota__c</fullName>
        <description>RUNRATE Quota from sales Ops</description>
        <label>RUNRATE Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_Rejection__c</fullName>
        <description>This stores the reason of rejection for Goal Letter.</description>
        <label>Reason for Rejection</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salary_Effective_Date_2H__c</fullName>
        <label>Salary Effective Date_2H</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary_Effective_Date__c</fullName>
        <label>Salary Effective Date_1H</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_For_eSignature__c</fullName>
        <formula>IF(ISPICKVAL(Goal_Letter_Status__c ,&quot;Approved&quot;) &amp;&amp; ISPICKVAL(eSign_Status__c ,&quot;Not Submitted&quot;),
HYPERLINK(&quot;/apex/Send_GL_ForEsign?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Echosign__eSignature&quot;,&quot;Send For eSignatures&quot;), &quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send For eSignature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Annualized_Net_Contract_Value_RR__c</fullName>
        <description>Calc-(1H TV+2HTV)/2</description>
        <label>Target Annualized Net Contract Value(RR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Annualized_Net_Contract_Value__c</fullName>
        <description>Annualized Net Contract Values (ANCV) Target Amount from Workday</description>
        <label>Target Annualized Net Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Annualized_Net_Contract_Value_wt__c</fullName>
        <description>Calc-(1H TV+2HTV)/2</description>
        <label>Target Annualized Net Contract Value(wt)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Booking_Commission_Variable__c</fullName>
        <description>Commission plan Target Amount from Workday</description>
        <label>Target Booking Commission Variable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_KC_2H_Percent_of_Base_Salary__c</fullName>
        <label>Target KC_2H(Percent of Base Salary)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Target_KC_Percent_of_Base_Salary__c</fullName>
        <description>Key Contributor Incentive Plan target% from Workday</description>
        <label>Target KC_1H (Percent of Base Salary)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <formula>Assigned_Accounts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Period_Covered__c</fullName>
        <formula>Plan_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Period Covered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1H_Effective_AMT_ANCV_Target_Variable__c</fullName>
        <label>1H Effective AMT ANCV Target Variable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1H_Effective_RR_Target_Variable__c</fullName>
        <label>1H Effective RR Target Variable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2H_Effective_AMT_ANCV_Target_Variable__c</fullName>
        <label>2H Effective AMT ANCV Target Variable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2H_Effective_RR_Target_Variable__c</fullName>
        <label>2H Effective RR Target Variable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eSign_Status__c</fullName>
        <label>eSign Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Out For Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSelected</label>
        <type>Checkbox</type>
    </fields>
    <label>Goal Letter</label>
    <nameField>
        <displayFormat>GL-{00000000}</displayFormat>
        <label>Goal Letter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goal Letters</pluralLabel>
    <recordTypes>
        <fullName>GL</fullName>
        <active>true</active>
        <label>GL</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Manager__c</fullName>
        <label>Manager</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Participant__c</fullName>
        <label>Participant</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SF_Group__c</fullName>
        <label>SF Group</label>
    </sharingReasons>
</CustomObject>